# bot_collection_rs

./: Cargo.toml
src/: lib.rs
src/captcha/: mod.rs  solvers.rs
